# cross-copy

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release-all.yml
scripts/: release-all.mjs  sign-macos-app.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: core.rs  crypto.rs  lib.rs  logger.rs  main.rs  model.rs  mouse_hook.rs  mouse_share.rs  store.rs  windows_clipboard.rs
src/renderer/: index.html  src.tsx  styles.css  types.ts
