[package]
name = "crosscopy"
version = "0.2.2"
description = "Fast private LAN clipboard sync"
authors = ["CrossCopy"]
edition = "2021"

[lib]
name = "crosscopy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clipboard-rs = { version = "0.3.5", default-features = false, features = ["image"] }
dirs = "6"
enigo = "0.6"
get_if_addrs = "0.5"
hmac = "0.12"
hostname = "0.4"
rand = "0.9"
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
